--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/sheikhimtiaz/customized-chartjs/issues"
   },
-  "homepage": "https://github.com/sheikhimtiaz/customized-chartjs#readme"
+  "homepage": "https://github.com/sheikhimtiaz/customized-chartjs#readme",
+  "dependencies": {
+    "chart.js": "^2.9.3"
+  }
 }
