--- a/package.json
+++ b/package.json
@@ -12,12 +12,18 @@
   },
   "keywords": [],
   "author": "",
+  "type": "module",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/sheikhimtiaz/customized-chartjs/issues"
   },
   "homepage": "https://github.com/sheikhimtiaz/customized-chartjs#readme",
   "dependencies": {
-    "chart.js": "^2.9.3"
+    "chart.js": "^2.9.3",
+    "require": "^2.4.20"
+  },
+  "compilerOptions": {
+    "target": "es2016",
+    "module": "commonjs"
   }
 }
